--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARCEMUSA - Premier Construction Company</title>
-    <meta name="description" content="ARCEMUSA is a premier construction company delivering exceptional quality and innovative solutions for complex projects." />
+    <title>ARCEM - Premier Construction Company</title>
+    <meta name="description" content="ARCEM is a premier construction company delivering exceptional quality and innovative solutions for complex projects." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
